--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
       <nav>
   <ul class="flex gap-6 items-center text-[17px] font-medium">
     <li><a href="#intro" class="hover:text-[var(--brand-blue)] transition-colors">Introduction</a></li>
-    <li><a href="#services" class="hover:text-[var(--brand-blue)] transition-colors">Services</a></li>
-    <li><a href="#contact" class="hover:text-[var(--brand-blue)] transition-colors">Inquiry</a></li>
+          <li><a href="#services" class="hover:text-[var(--brand-blue)] transition-colors">Services</a></li>
+          <li><a href="#contact" class="hover:text-[var(--brand-blue)] transition-colors">Inquiry</a></li>
+          <li><a href="testimonies.html" class="hover:text-[var(--brand-blue)] transition-colors">Our Testimonies</a></li>
     <!-- Social Links -->
     <li>
       <a href="https://www.instagram.com/xposemarket/" target="_blank" rel="noopener noreferrer" aria-label="Instagram" class="hover:text-[var(--brand-orange)] transition-colors">
@@ -64,7 +65,7 @@
       </div>
     </section>
 
-    <!-- Services Section -->
+ <!-- Services Section -->
     <section id="services" class="py-24 px-4 bg-slate-50">
       <div class="max-w-6xl mx-auto">
         <h2 class="text-3xl sm:text-4xl font-bold text-center text-[var(--brand-blue)] mb-12">Our Services</h2>
@@ -93,7 +94,7 @@
       </div>
     </section>
 
-    <!-- Contact / Inquiry Section -->
+  <!-- Contact / Inquiry Section -->
     <section id="contact" class="py-24 px-4 bg-white">
       <div class="max-w-xl mx-auto">
         <h2 class="text-3xl sm:text-4xl font-bold text-[var(--brand-blue)] text-center mb-8">Start Your Growth Journey</h2>
@@ -110,7 +111,7 @@
 
   <!-- ================= FOOTER ================= -->
   <footer class="py-8 bg-slate-50 text-center text-sm text-slate-500">
-    &copy; <span id="year"></span> Xpose Market. All rights reserved.
+    © <span id="year"></span> Xpose Market. All rights reserved.
   </footer>
 
   <!-- Auto-update year -->
