--- a/testimonies.html
+++ b/testimonies.html
@@ -95,12 +95,12 @@
     <div class="max-w-6xl mx-auto px-4">
       <h2 class="text-3xl md:text-4xl font-bold text-slate-800 text-center mb-8">Our Story</h2>
       <p class="text-lg text-slate-600 max-w-3xl mx-auto">
-        Xpose Market's creation dates back to 2015 with the creation of a single social media page. Our founder, Raul Feliciano, discovered his passion for digital marketing during the early social media boom. Starting with an Instagram page posting humorous videos and pictures, Raul quickly amassed a following, reaching nearly 20,000 followers in just six months. By engaging with the community and learning sales and promotional tactics, he grew his presence to over 150,000 followers across platforms within a year and a half. Raul saw the shift in the inquiry market going from personal business, to brand inquiries such as clothing brands and other retail shops. 
+        Xpose Market's creation dates back to 2015 with the creation of a single social media page. Our founder, discovered his passion for digital marketing during the early social media boom. Starting with an Instagram page posting humorous videos and pictures, he quickly amassed a following, reaching nearly 20,000 followers in just six months. By engaging with the community and learning sales and promotional tactics, he grew his presence to over 150,000 followers across platforms within a year and a half. He saw the shift in the inquiry market going from personal business, to brand inquiries such as clothing brands and other retail shops. 
   </p>
  </p>
 <div class="max-w-6xl mx-auto px-6">
       <p class="text-lg text-slate-600 max-w-3xl mx-auto">
-Empowered by his local community, he began to search for ways to help local businesses and brands grow and expand their outreach in a seemingly easy way. Through his career of the restaurant industry to hospitality sales, Raul saw the power of digital marketing to drive business growth, from local shops to clothing brands, laying the foundation for Xpose Market’s mission to empower businesses through strategic marketing.
+Empowered by his local community, he began to search for ways to help local businesses and brands grow and expand their outreach in a seemingly easy way. Through his career of the restaurant industry to hospitality sales, our founder saw the power of digital marketing to drive business growth, from local shops to clothing brands, laying the foundation for Xpose Market’s mission to empower businesses through strategic marketing.
 
       </p>
     </div>
