--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <!-- Service Card -->
           <div class="rounded-2xl shadow-lg p-8 bg-white">
             <h3 class="text-xl font-semibold mb-2">Logo Creation</h3>
-            <p>Craft a memorable visual identity that resonates and endures.</p>
+            <p>Allow our team to design you and your brand a logo that stands out and is sure to attract new customers.</p>
           </div>
           <!-- Service Card -->
           <div class="rounded-2xl shadow-lg p-8 bg-white">
