--- a/index.html
+++ b/index.html
@@ -78,17 +78,17 @@
           <!-- Service Card -->
           <div class="rounded-2xl shadow-lg p-8 bg-white">
             <h3 class="text-xl font-semibold mb-2">Website Creation</h3>
-            <p>Responsive, SEO‑friendly sites that convert visitors into customers.</p>
+            <p>Responsive, SEO‑friendly sites that convert visitors into customers. Dont worry about the hassle of coding and designing, let us do it!</p>
           </div>
           <!-- Service Card -->
           <div class="rounded-2xl shadow-lg p-8 bg-white">
             <h3 class="text-xl font-semibold mb-2">Advertisements</h3>
-            <p>Targeted ad campaigns across search, social, and display networks.</p>
+            <p>Targeted ad campaigns across search, social, and display networks. Use your own products or let our team design you a promotional ad/flyer!.</p>
           </div>
           <!-- Service Card -->
           <div class="rounded-2xl shadow-lg p-8 bg-white opacity-60">
             <h3 class="text-xl font-semibold mb-2 flex items-center gap-2">Social Media Marketing <span class="text-sm bg-yellow-300 text-slate-800 px-2 py-1 rounded">Coming&nbsp;Soon</span></h3>
-            <p>Engage audiences, build communities, and amplify your brand voice.</p>
+            <p>With a dedicated team on our side, allow us to create and/or manage your social media page for you! Our team focuses on driving engagement including posting and updating according to the brand, and engaging with followers/customers.</p>
           </div>
         </div>
       </div>
