--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           </div>
           <!-- Service Card -->
           <div class="rounded-2xl shadow-lg p-8 bg-white">
-            <h3 class="text-xl font-semibold mb-2">Website Creation</h3>
+            <h3 class="text-xl font-semibold mb-2">Website Creation & Management</h3>
             <p>Responsive, SEO‑friendly sites that convert visitors into customers. Dont worry about the hassle of coding and designing, let us do it!</p>
           </div>
           <!-- Service Card -->
