--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   <!-- Contact / Inquiry Section -->
     <section id="contact" class="py-24 px-4 bg-white">
       <div class="max-w-xl mx-auto">
-        <h2 class="text-3xl sm:text-4xl font-bold text-[var(--brand-blue)] text-center mb-8">Start Your Growth Journey</h2>
+        <h2 class="text-3xl sm:text-4xl font-bold text-[var(--brand-blue)] text-center mb-8">Start Your Growth Journey, Fill Out The Form Below For a Free Consultation Today!</h2>
         <form action="https://formspree.io/f/xkgzwwzj" method="POST" class="grid gap-6">
           <input type="text" name="name" placeholder="Name" required class="border border-slate-300 rounded-lg px-4 py-3 focus:outline-none focus:ring-2 focus:ring-[var(--brand-blue)]" />
           <input type="email" name="email" placeholder="Email" required class="border border-slate-300 rounded-lg px-4 py-3 focus:outline-none focus:ring-2 focus:ring-[var(--brand-blue)]" />
