--- a/testimonies.html
+++ b/testimonies.html
@@ -95,7 +95,7 @@
     <div class="max-w-6xl mx-auto px-4">
       <h2 class="text-3xl md:text-4xl font-bold text-slate-800 text-center mb-8">Our Story</h2>
       <p class="text-lg text-slate-600 max-w-3xl mx-auto">
-        Xpose Market's creation dates back to 2015 with the creation of a single social media page. Our founder, discovered his passion for digital marketing during the early social media boom. Starting with an Instagram page posting humorous videos and pictures, he quickly amassed a following, reaching nearly 20,000 followers in just six months. By engaging with the community and learning sales and promotional tactics, he grew his presence to over 150,000 followers across platforms within a year and a half. He saw the shift in the inquiry market going from personal business, to brand inquiries such as clothing brands and other retail shops. 
+       The idea of <b>Xpose Market</b> dates back to 2015 with the creation of a single social media page. Our founder, discovered his passion for digital marketing during the early social media boom. Starting with an Instagram page posting humorous videos and pictures, he quickly amassed a following, reaching nearly 20,000 followers in just six months. By engaging with the community and learning sales and promotional tactics, he grew his presence to over 150,000 followers across platforms within a year and a half. He saw the shift in the inquiry market going from personal business, to brand inquiries such as clothing brands and other retail shops. 
   </p>
  </p>
 <div class="max-w-6xl mx-auto px-6">
