--- a/testimonies.html
+++ b/testimonies.html
@@ -100,7 +100,7 @@
  </p>
 <div class="max-w-6xl mx-auto px-6">
       <p class="text-lg text-slate-600 max-w-3xl mx-auto">
-Empowered by his local community, he began to search for ways to help local businesses and brands grow and expand their outreach in a seemingly easy way. Through his career of the restaurant industry to hospitality sales, our founder saw the power of digital marketing to drive business growth, from local shops to clothing brands, laying the foundation for Xpose Market’s mission to empower businesses through strategic marketing.
+Empowered by his local community, he began to search for ways to help local businesses and brands grow and expand their outreach in a seemingly easy way. Through his career of the restaurant industry to hospitality sales, our founder saw the power of digital marketing to drive business growth, from local shops to clothing brands, laying the foundation for <b>Xpose Market’s</b> mission to empower businesses through strategic marketing.
 
       </p>
     </div>
