--- a/index.html
+++ b/index.html
@@ -89,9 +89,14 @@
           <div class="rounded-2xl shadow-lg p-8 bg-white opacity-60">
             <h3 class="text-xl font-semibold mb-2 flex items-center gap-2">Social Media Marketing <span class="text-sm bg-yellow-300 text-slate-800 px-2 py-1 rounded">Coming&nbsp;Soon</span></h3>
             <p>With a dedicated team on our side, allow us to create and/or manage your social media page for you! Our team focuses on driving engagement including posting and updating according to the brand, and engaging with followers/customers.</p>
+
           </div>
         </div>
-      </div>
+<div class="text-center mt-10">
+  <a href="services.html" class="inline-block px-5 py-3 bg-[var(--brand-orange)] text-white font-semibold rounded-lg hover:brightness-110 transition">
+    See More
+  </a>
+</div>
     </section>
 
   <!-- Contact / Inquiry Section -->
@@ -104,7 +109,13 @@
           <textarea name="business" rows="4" placeholder="Tell us about your business…" required class="border border-slate-300 rounded-lg px-4 py-3 focus:outline-none focus:ring-2 focus:ring-[var(--brand-blue)]"></textarea>
           <textarea name="goal" rows="5" placeholder="What is your goal?" required class="border border-slate-300 rounded-lg px-4 py-3 focus:outline-none focus:ring-2 focus:ring-[var(--brand-blue)]"></textarea>
           <button type="submit" class="bg-[var(--brand-blue)] text-white font-semibold py-3 rounded-lg hover:brightness-110 transition">Send Inquiry</button>
-        </form>
+        <form>
+<script>
+  document.getElementById('inquiryForm').addEventListener('submit', function(event) {
+    event.preventDefault(); // Prevent default form submission
+    window.location.href = 'thank-you.html'; // Redirect to thank-you page
+  });
+</script>
       </div>
     </section>
   </main>
@@ -117,6 +128,10 @@
   <!-- Auto-update year -->
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
+    document.getElementById('inquiryForm').addEventListener('submit', function(event) {
+    event.preventDefault(); // Prevent default form submission
+    window.location.href = 'thank-you.html'; // Redirect to thank-you page
+  });
   </script>
 </body>
 </html>
