--- a/testimonies.html
+++ b/testimonies.html
@@ -95,15 +95,21 @@
     <div class="max-w-6xl mx-auto px-4">
       <h2 class="text-3xl md:text-4xl font-bold text-slate-800 text-center mb-8">Our Story</h2>
       <p class="text-lg text-slate-600 max-w-3xl mx-auto">
-       The idea of <b>Xpose Market</b> dates back to 2015 with the creation of a single social media page. Our founder, discovered his passion for digital marketing during the early social media boom. Starting with an Instagram page posting humorous videos and pictures, he quickly amassed a following, reaching nearly 20,000 followers in just six months. By engaging with the community and learning sales and promotional tactics, he grew his presence to over 150,000 followers across platforms within a year and a half. He saw the shift in the inquiry market going from personal business, to brand inquiries such as clothing brands and other retail shops. 
+       The origins of <b>Xpose Market</b> trace back to 2015, beginning with the launch of a single social media page. During the early boom of social media, the founder discovered a passion for digital marketing. What started as an Instagram account sharing humorous videos and images quickly gained momentum, attracting nearly 20,000 followers within just six months. By actively engaging with the community and applying emerging sales and promotional strategies, the audience expanded to more than 150,000 followers across multiple platforms within a year and a half. 
   </p>
  </p>
 <div class="max-w-6xl mx-auto px-6">
       <p class="text-lg text-slate-600 max-w-3xl mx-auto">
-Empowered by his local community, he began to search for ways to help local businesses and brands grow and expand their outreach in a seemingly easy way. Through his career of the restaurant industry to hospitality sales, our founder saw the power of digital marketing to drive business growth, from local shops to clothing brands, laying the foundation for <b>Xpose Market’s</b> mission to empower businesses through strategic marketing.
+As brand inquiries from clothing labels and retail businesses began to replace personal requests, the founder recognized a shift in the marketplace. Motivated by the support of the local community, the focus turned toward finding effective ways to help local businesses and brands broaden their reach.
 
       </p>
-    </div>
+   </p>
+<div class="max-w-6xl mx-auto px-6">
+      <p class="text-lg text-slate-600 max-w-3xl mx-auto">
+Drawing from professional experience in the restaurant industry and hospitality sales, the founder witnessed firsthand the ability of digital marketing to drive measurable growth—from neighborhood shops to established clothing brands. This journey laid the foundation for Xpose Market’s mission: empowering businesses through strategic, creative, and results-driven marketing.              
+           </p>
+   </p>
+</div>
   </section>
 
   <!-- ================= CLIENT REVIEWS SECTION ================= -->
