--- a/services.html
+++ b/services.html
@@ -46,7 +46,7 @@
         <!-- STARTER -->
         <div class="p-8 bg-white rounded-2xl shadow text-center border border-slate-200">
           <h3 class="text-xl font-bold">Starter</h3>
-          <p class="text-2xl font-extrabold my-2">$200 Setup + $35/mo</p>
+          <p class="text-2xl font-extrabold my-2">$175 Setup + $40/mo</p>
           <p class="text-sm mb-4">Great for new businesses testing online presence.</p>
 
           <button aria-expanded="false" data-target="starter-details" class="toggle-btn mt-2 mx-auto inline-flex items-center gap-2 px-4 py-2 bg-[var(--brand-blue)] text-white rounded font-semibold hover:brightness-110 transition">
@@ -61,9 +61,9 @@
                   <tr><td class="p-3 font-semibold">Hosting</td><td class="p-3"><code>business.github.io</code> (free hosting)</td></tr>
                   <tr><td class="p-3 font-semibold">Domain</td><td class="p-3">Not included</td></tr>
                   <tr><td class="p-3 font-semibold">Premium Domains</td><td class="p-3">Not available</td></tr>
-                  <tr><td class="p-3 font-semibold">Pages Included</td><td class="p-3">Up to 3 pages</td></tr>
-                  <tr><td class="p-3 font-semibold">Updates / Edits</td><td class="p-3">1 edit per month</td></tr>
-                  <tr><td class="p-3 font-semibold">Extra Edits</td><td class="p-3">$30 each</td></tr>
+                  <tr><td class="p-3 font-semibold">Pages Included</td><td class="p-3">Up to 2 pages</td></tr>
+                  <tr><td class="p-3 font-semibold">Updates / Edits</td><td class="p-3">2 edit per month</td></tr>
+                  <tr><td class="p-3 font-semibold">Extra Edits</td><td class="p-3">$25 each</td></tr>
                   <tr><td class="p-3 font-semibold">Custom Email</td><td class="p-3">Not included</td></tr>
                   <tr><td class="p-3 font-semibold">SEO</td><td class="p-3">Basic</td></tr>
                   <tr><td class="p-3 font-semibold">Support Speed</td><td class="p-3">5–7 business days</td></tr>
@@ -77,7 +77,7 @@
         <!-- PRO -->
         <div class="p-8 bg-[var(--brand-blue)] text-white rounded-2xl shadow text-center">
           <h3 class="text-xl font-bold">Professional</h3>
-          <p class="text-2xl font-extrabold my-2">$300 Setup + $60/mo</p>
+          <p class="text-2xl font-extrabold my-2">$250 Setup + $60/mo</p>
           <p class="text-sm mb-4 opacity-95">Best value for small businesses ready to scale.</p>
 
           <button aria-expanded="false" data-target="pro-details" class="toggle-btn mt-2 mx-auto inline-flex items-center gap-2 px-4 py-2 bg-white text-[var(--brand-blue)] rounded font-semibold hover:bg-slate-100 transition">
@@ -92,7 +92,7 @@
                   <tr><td class="p-3 font-semibold">Hosting</td><td class="p-3"><code>businessname.com</code> (standard domain included, up to $20/yr)</td></tr>
                   <tr><td class="p-3 font-semibold">Premium Domains</td><td class="p-3">Available — client pays extra cost</td></tr>
                   <tr><td class="p-3 font-semibold">Pages Included</td><td class="p-3">Up to 5 pages</td></tr>
-                  <tr><td class="p-3 font-semibold">Updates / Edits</td><td class="p-3">2 edits per month</td></tr>
+                  <tr><td class="p-3 font-semibold">Updates / Edits</td><td class="p-3">5 edits per month</td></tr>
                   <tr><td class="p-3 font-semibold">Extra Edits</td><td class="p-3">$25 each</td></tr>
                   <tr><td class="p-3 font-semibold">Custom Email</td><td class="p-3">1 email</td></tr>
                   <tr><td class="p-3 font-semibold">SEO</td><td class="p-3">Enhanced</td></tr>
@@ -123,8 +123,8 @@
                   <tr><td class="p-3 font-semibold">Domain</td><td class="p-3">Includes domain credit up to $50/yr (client pays beyond credit)</td></tr>
                   <tr><td class="p-3 font-semibold">Premium Domains</td><td class="p-3">Available — client pays extra beyond credit</td></tr>
                   <tr><td class="p-3 font-semibold">Pages Included</td><td class="p-3">Up to 10 pages</td></tr>
-                  <tr><td class="p-3 font-semibold">Updates / Edits</td><td class="p-3">Unlimited minor edits</td></tr>
-                  <tr><td class="p-3 font-semibold">Extra Edits</td><td class="p-3">$0 (included)</td></tr>
+                  <tr><td class="p-3 font-semibold">Updates / Edits</td><td class="p-3">15 edits per month</td></tr>
+                  <tr><td class="p-3 font-semibold">Extra Edits</td><td class="p-3">$20 each</td></tr>
                   <tr><td class="p-3 font-semibold">Custom Email</td><td class="p-3">Up to 3 emails</td></tr>
                   <tr><td class="p-3 font-semibold">SEO</td><td class="p-3">Advanced + monthly report</td></tr>
                   <tr><td class="p-3 font-semibold">Support Speed</td><td class="p-3">Priority (same week)</td></tr>
@@ -137,6 +137,8 @@
       </div>
 
       <p class="text-sm text-slate-500 mt-6">* Premium domains (short, highly competitive names) may cost more and are billed to client at registrar price. All plans include responsive design and core performance best‑practices.</p>
+    </div>
+    <p class="text-sm text-slate-500 mt-6">* Please note, monthly cost is for Website Creation, Hosting & Management. Management is not necessary however price per edits may vary if the plan does not include management.</p>
     </div>
   </section>
 
@@ -248,4 +250,5 @@
   </script>
 </body>
 </html>
+
 
