--- a/testimonies.html
+++ b/testimonies.html
@@ -54,32 +54,50 @@
 </head>
 <body class="bg-white font-sans leading-relaxed text-slate-800">
   <!-- ================= HEADER / NAV ================= -->
-  <header class="sticky top-0 bg-white shadow-sm z-50">
-    <div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between">
-      <!-- Brand Text Logo -->
-      <a href="index.html#intro" class="flex items-center gap-1 select-none" aria-label="Xpose Market">
-        <span class="text-[var(--brand-blue)] font-extrabold text-2xl tracking-tight">Xpose</span>
-        <span class="text-[var(--brand-orange)] font-extrabold text-2xl tracking-tight">Market</span>
+ <header class="sticky top-0 bg-white shadow-sm z-50">
+  <div class="max-w-6xl mx-auto px-4 py-3">
+    <div class="flex items-center justify-between">
+      <!-- Brand: logo + name -->
+      <a href="#intro" class="flex items-center gap-2 select-none" aria-label="Xpose Market">
+        <!-- Replace /assets/xpose-logo.png with your actual logo path -->
+        <img src="/assets/xpose-logo.png" alt="Xpose Market logo"
+             class="h-9 w-9 object-contain shrink-0" />
+        <div class="leading-none">
+          <span class="text-[var(--brand-blue)] font-extrabold text-2xl tracking-tight">Xpose</span>
+          <span class="text-[var(--brand-orange)] font-extrabold text-2xl tracking-tight">Market</span>
+        </div>
       </a>
-      <!-- Navigation -->
-      <nav>
-        <ul class="flex gap-4 items-center text-[17px] font-medium">
-          <li><a href="index.html#intro" class="hover:text-[var(--brand-blue)] transition-colors">Introduction</a></li>
-          <li><a href="index.html#services" class="hover:text-[var(--brand-blue)] transition-colors">Services</a></li>
-          <li><a href="index.html#contact" class="hover:text-[var(--brand-blue)] transition-colors">Inquiry</a></li>
+
+      <!-- Mobile menu button -->
+      <button id="navToggle"
+              class="md:hidden inline-flex items-center justify-center p-2 rounded-md border border-slate-200"
+              aria-expanded="false" aria-controls="primaryNav">
+        <span class="sr-only">Open main menu</span>
+        <!-- 3-line icon -->
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none"
+             viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M4 7h16M4 12h16M4 17h16" />
+        </svg>
+      </button>
+
+      <!-- Desktop nav -->
+      <nav class="hidden md:block">
+        <ul class="flex gap-6 items-center text-[17px] font-medium">
+          <li><a href="#intro" class="hover:text-[var(--brand-blue)] transition-colors">Introduction</a></li>
+          <li><a href="#services" class="hover:text-[var(--brand-blue)] transition-colors">Services</a></li>
+          <li><a href="#contact" class="hover:text-[var(--brand-blue)] transition-colors">Inquiry</a></li>
           <li><a href="testimonies.html" class="hover:text-[var(--brand-blue)] transition-colors">Our Testimonies</a></li>
-          <!-- Social Links -->
           <li>
-            <a href="https://www.instagram.com/xposemarket/" target="_blank" rel="noopener noreferrer" aria-label="Instagram" class="hover:text-[var(--brand-orange)] transition-colors">
-              <!-- Instagram SVG Icon -->
+            <a href="https://www.instagram.com/xposemarket/" target="_blank" rel="noopener noreferrer"
+               aria-label="Instagram" class="hover:text-[var(--brand-orange)] transition-colors">
               <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
                 <path d="M7.75 2A5.75 5.75 0 002 7.75v8.5A5.75 5.75 0 007.75 22h8.5A5.75 5.75 0 0022 16.25v-8.5A5.75 5.75 0 0016.25 2h-8.5zm0 1.5h8.5a4.25 4.25 0 014.25 4.25v8.5a4.25 4.25 0 01-4.25 4.25h-8.5a4.25 4.25 0 01-4.25-4.25v-8.5a4.25 4.25 0 014.25-4.25zm4.25 3a4.5 4.5 0 100 9 4.5 4.5 0 000-9zm0 1.5a3 3 0 110 6 3 3 0 010-6zm4.75-.75a1.125 1.125 0 11-2.25 0 1.125 1.125 0 012.25 0z"/>
               </svg>
             </a>
           </li>
           <li>
-            <a href="https://x.com/XposeMarket" target="_blank" rel="noopener noreferrer" aria-label="X (Twitter)" class="hover:text-[var(--brand-orange)] transition-colors">
-              <!-- X (Twitter) SVG Icon -->
+            <a href="https://x.com/XposeMarket" target="_blank" rel="noopener noreferrer"
+               aria-label="X (Twitter)" class="hover:text-[var(--brand-orange)] transition-colors">
               <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
                 <path d="M23 3a10.9 10.9 0 01-3.14.86 4.48 4.48 0 001.98-2.48 9.12 9.12 0 01-2.88 1.1 4.52 4.52 0 00-7.72 4.13 12.84 12.84 0 01-9.31-4.72 4.53 4.53 0 001.4 6.04 4.48 4.48 0 01-2.05-.57v.06a4.52 4.52 0 003.63 4.44 4.49 4.49 0 01-2.04.08 4.53 4.53 0 004.22 3.14A9.05 9.05 0 013 18.41a12.79 12.79 0 006.93 2.03c8.32 0 12.87-6.9 12.87-12.87 0-.2 0-.42-.01-.63A9.22 9.22 0 0023 3z"/>
               </svg>
@@ -88,7 +106,30 @@
         </ul>
       </nav>
     </div>
-  </header>
+
+    <!-- Mobile nav (collapsible) -->
+    <nav id="primaryNav" class="md:hidden hidden mt-3">
+      <ul class="space-y-2 text-[17px] font-medium">
+        <li><a href="#intro" class="block px-2 py-2 rounded hover:bg-slate-100">Introduction</a></li>
+        <li><a href="#services" class="block px-2 py-2 rounded hover:bg-slate-100">Services</a></li>
+        <li><a href="#contact" class="block px-2 py-2 rounded hover:bg-slate-100">Inquiry</a></li>
+        <li><a href="testimonies.html" class="block px-2 py-2 rounded hover:bg-slate-100">Our Testimonies</a></li>
+        <li class="flex gap-4 px-2 py-2">
+          <a href="https://www.instagram.com/xposemarket/" target="_blank" aria-label="Instagram" class="hover:text-[var(--brand-orange)]">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
+              <path d="M7.75 2A5.75 5.75 0 002 7.75v8.5A5.75 5.75 0 007.75 22h8.5A5.75 5.75 0 0022 16.25v-8.5A5.75 5.75 0 0016.25 2h-8.5zm0 1.5h8.5a4.25 4.25 0 014.25 4.25v8.5a4.25 4.25 0 01-4.25 4.25h-8.5a4.25 4.25 0 01-4.25-4.25v-8.5a4.25 4.25 0 014.25-4.25zm4.25 3a4.5 4.5 0 100 9 4.5 4.5 0 000-9zm0 1.5a3 3 0 110 6 3 3 0 010-6zm4.75-.75a1.125 1.125 0 11-2.25 0 1.125 1.125 0 012.25 0z"/>
+            </svg>
+          </a>
+          <a href="https://x.com/XposeMarket" target="_blank" aria-label="X (Twitter)" class="hover:text-[var(--brand-orange)]">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
+              <path d="M23 3a10.9 10.9 0 01-3.14.86 4.48 4.48 0 001.98-2.48 9.12 9.12 0 01-2.88 1.1 4.52 4.52 0 00-7.72 4.13 12.84 12.84 0 01-9.31-4.72 4.53 4.53 0 001.4 6.04 4.48 4.48 0 01-2.05-.57v.06a4.52 4.52 0 003.63 4.44 4.49 4.49 0 01-2.04.08 4.53 4.53 0 004.22 3.14A9.05 9.05 0 013 18.41a12.79 12.79 0 006.93 2.03c8.32 0 12.87-6.9 12.87-12.87 0-.2 0-.42-.01-.63A9.22 9.22 0 0023 3z"/>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+</header>
 
   <!-- ================= COMPANY STORY SECTION ================= -->
   <section id="company-story" class="py-16 bg-orange-100">
