--- a/services.html
+++ b/services.html
@@ -44,10 +44,10 @@
       <!-- Desktop nav -->
       <nav class="hidden md:block">
         <ul class="flex gap-6 items-center text-[17px] font-medium">
-        <li><a href="https://xposemarket.github.io/" class="block px-2 py-2 rounded hover:bg-slate-100">Introduction</a></li>
-        <li><a href="https://xposemarket.github.io/services.html" class="block px-2 py-2 rounded hover:bg-slate-100">Services</a></li>
-        <li><a href="https://xposemarket.github.io/#contact" class="block px-2 py-2 rounded hover:bg-slate-100">Inquiry</a></li>
-        <li><a href="https://xposemarket.github.io/testimonies.html" class="block px-2 py-2 rounded hover:bg-slate-100">Our Testimonies</a></li>
+        <li><a href="index.html" class="block px-2 py-2 rounded hover:bg-slate-100">Introduction</a></li>
+        <li><a href="services.html" class="block px-2 py-2 rounded hover:bg-slate-100">Services</a></li>
+        <li><a href="index.html" class="block px-2 py-2 rounded hover:bg-slate-100">Inquiry</a></li>
+        <li><a href="testimonies.html" class="block px-2 py-2 rounded hover:bg-slate-100">Our Testimonies</a></li>
           <li>
             <a href="https://www.instagram.com/xposemarket/" target="_blank" rel="noopener noreferrer"
                aria-label="Instagram" class="hover:text-[var(--brand-orange)] transition-colors">
@@ -71,10 +71,10 @@
     <!-- Mobile nav (collapsible) -->
     <nav id="primaryNav" class="md:hidden hidden mt-3">
       <ul class="space-y-2 text-[17px] font-medium">
-        <li><a href="https://xposemarket.github.io/" class="block px-2 py-2 rounded hover:bg-slate-100">Introduction</a></li>
-        <li><a href="https://xposemarket.github.io/services.html" class="block px-2 py-2 rounded hover:bg-slate-100">Services</a></li>
-        <li><a href="https://xposemarket.github.io/#contact" class="block px-2 py-2 rounded hover:bg-slate-100">Inquiry</a></li>
-        <li><a href="https://xposemarket.github.io/testimonies.html" class="block px-2 py-2 rounded hover:bg-slate-100">Our Testimonies</a></li>
+        <li><a href="index.html" class="block px-2 py-2 rounded hover:bg-slate-100">Introduction</a></li>
+        <li><a href="services.html" class="block px-2 py-2 rounded hover:bg-slate-100">Services</a></li>
+        <li><a href="index.html" class="block px-2 py-2 rounded hover:bg-slate-100">Inquiry</a></li>
+        <li><a href="testimonies.html" class="block px-2 py-2 rounded hover:bg-slate-100">Our Testimonies</a></li>
         <li class="flex gap-4 px-2 py-2">
           <a href="https://www.instagram.com/xposemarket/" target="_blank" aria-label="Instagram" class="hover:text-[var(--brand-orange)]">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
@@ -324,6 +324,7 @@
 
 </body>
 </html>
+
 
 
 
