--- a/testimonies.html
+++ b/testimonies.html
@@ -83,10 +83,10 @@
       <!-- Desktop nav -->
       <nav class="hidden md:block">
         <ul class="flex gap-6 items-center text-[17px] font-medium">
-          <li><a href="#intro" class="hover:text-[var(--brand-blue)] transition-colors">Introduction</a></li>
-          <li><a href="#services" class="hover:text-[var(--brand-blue)] transition-colors">Services</a></li>
-          <li><a href="#contact" class="hover:text-[var(--brand-blue)] transition-colors">Inquiry</a></li>
-          <li><a href="testimonies.html" class="hover:text-[var(--brand-blue)] transition-colors">Our Testimonies</a></li>
+        <li><a href="index.html" class="block px-2 py-2 rounded hover:bg-slate-100">Introduction</a></li>
+        <li><a href="services.html" class="block px-2 py-2 rounded hover:bg-slate-100">Services</a></li>
+        <li><a href="index.html" class="block px-2 py-2 rounded hover:bg-slate-100">Inquiry</a></li>
+        <li><a href="testimonies.html" class="block px-2 py-2 rounded hover:bg-slate-100">Our Testimonies</a></li>
           <li>
             <a href="https://www.instagram.com/xposemarket/" target="_blank" rel="noopener noreferrer"
                aria-label="Instagram" class="hover:text-[var(--brand-orange)] transition-colors">
@@ -110,9 +110,9 @@
     <!-- Mobile nav (collapsible) -->
     <nav id="primaryNav" class="md:hidden hidden mt-3">
       <ul class="space-y-2 text-[17px] font-medium">
-        <li><a href="#intro" class="block px-2 py-2 rounded hover:bg-slate-100">Introduction</a></li>
-        <li><a href="#services" class="block px-2 py-2 rounded hover:bg-slate-100">Services</a></li>
-        <li><a href="#contact" class="block px-2 py-2 rounded hover:bg-slate-100">Inquiry</a></li>
+        <li><a href="index.html" class="block px-2 py-2 rounded hover:bg-slate-100">Introduction</a></li>
+        <li><a href="services.html" class="block px-2 py-2 rounded hover:bg-slate-100">Services</a></li>
+        <li><a href="index.html" class="block px-2 py-2 rounded hover:bg-slate-100">Inquiry</a></li>
         <li><a href="testimonies.html" class="block px-2 py-2 rounded hover:bg-slate-100">Our Testimonies</a></li>
         <li class="flex gap-4 px-2 py-2">
           <a href="https://www.instagram.com/xposemarket/" target="_blank" aria-label="Instagram" class="hover:text-[var(--brand-orange)]">
