--- a/testimonies.html
+++ b/testimonies.html
@@ -58,7 +58,7 @@
   <div class="max-w-6xl mx-auto px-4 py-3">
     <div class="flex items-center justify-between">
       <!-- Brand: logo + name -->
-      <a href="#intro" class="flex items-center gap-2 select-none" aria-label="Xpose Market">
+      <a href="index.html" class="flex items-center gap-2 select-none" aria-label="Xpose Market">
         <!-- Replace /assets/xpose-logo.png with your actual logo path -->
         <img src="Clear_logo.png" alt="Xpose Market logo"
              class="h-9 w-9 object-contain shrink-0" />
