--- a/testimonies.html
+++ b/testimonies.html
@@ -60,7 +60,7 @@
       <!-- Brand: logo + name -->
       <a href="index.html" class="flex items-center gap-2 select-none" aria-label="Xpose Market">
         <!-- Replace /assets/xpose-logo.png with your actual logo path -->
-        <img src="Clear_logo.png" alt="Xpose Market logo"
+        <img src="ClearXlogo.png" alt="Xpose Market logo"
              class="h-9 w-9 object-contain shrink-0" />
         <div class="leading-none">
           <span class="text-[var(--brand-blue)] font-extrabold text-2xl tracking-tight">Xpose</span>
